Analisador Semântico/SemanticoArquivos/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On PUBLIC shift to state 1
-- On prog shift to state 5
-- On declaracao_algoritmo shift to state 6

State 1:
declaracao_algoritmo -> PUBLIC . CLASS ID ACHAVE [ VOID STATIC PUBLIC LOGICO INTEIRO DOUBLE CARACTER ]
-- On CLASS shift to state 2

State 2:
declaracao_algoritmo -> PUBLIC CLASS . ID ACHAVE [ VOID STATIC PUBLIC LOGICO INTEIRO DOUBLE CARACTER ]
-- On ID shift to state 3

State 3:
declaracao_algoritmo -> PUBLIC CLASS ID . ACHAVE [ VOID STATIC PUBLIC LOGICO INTEIRO DOUBLE CARACTER ]
-- On ACHAVE shift to state 4

State 4:
declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE . [ VOID STATIC PUBLIC LOGICO INTEIRO DOUBLE CARACTER ]
-- On VOID reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On STATIC reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On PUBLIC reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On LOGICO reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On INTEIRO reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On DOUBLE reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 
-- On CARACTER reduce production declaracao_algoritmo -> PUBLIC CLASS ID ACHAVE 

State 5:
prog' -> prog . [ # ]
-- On # accept prog

State 6:
prog -> declaracao_algoritmo . list(var_decl) list(func_decl) comando_block EOF [ # ]
-- On VOID shift to state 7
-- On LOGICO shift to state 8
-- On INTEIRO shift to state 9
-- On DOUBLE shift to state 10
-- On CARACTER shift to state 11
-- On var_decl shift to state 12
-- On tp_primitivo shift to state 13
-- On list(var_decl) shift to state 20
-- On STATIC reduce production list(var_decl) -> 
-- On PUBLIC reduce production list(var_decl) -> 

State 7:
tp_primitivo -> VOID . [ ID ]
-- On ID reduce production tp_primitivo -> VOID 

State 8:
tp_primitivo -> LOGICO . [ ID ]
-- On ID reduce production tp_primitivo -> LOGICO 

State 9:
tp_primitivo -> INTEIRO . [ ID ]
-- On ID reduce production tp_primitivo -> INTEIRO 

State 10:
tp_primitivo -> DOUBLE . [ ID ]
-- On ID reduce production tp_primitivo -> DOUBLE 

State 11:
tp_primitivo -> CARACTER . [ ID ]
-- On ID reduce production tp_primitivo -> CARACTER 

State 12:
list(var_decl) -> var_decl . list(var_decl) [ STATIC PUBLIC FCHAVE ]
-- On VOID shift to state 7
-- On LOGICO shift to state 8
-- On INTEIRO shift to state 9
-- On DOUBLE shift to state 10
-- On CARACTER shift to state 11
-- On var_decl shift to state 12
-- On tp_primitivo shift to state 13
-- On list(var_decl) shift to state 19
-- On STATIC reduce production list(var_decl) -> 
-- On PUBLIC reduce production list(var_decl) -> 
-- On FCHAVE reduce production list(var_decl) -> 

State 13:
var_decl -> tp_primitivo . separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA [ VOID STATIC PUBLIC LOGICO INTEIRO FCHAVE DOUBLE CARACTER ]
-- On ID shift to state 14
-- On separated_nonempty_list(VIRGULA,ID) shift to state 17

State 14:
separated_nonempty_list(VIRGULA,ID) -> ID . [ PONTOEVIRGULA ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ PONTOEVIRGULA ]
-- On VIRGULA shift to state 15
-- On PONTOEVIRGULA reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 15:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ PONTOEVIRGULA ]
-- On ID shift to state 14
-- On separated_nonempty_list(VIRGULA,ID) shift to state 16

State 16:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ PONTOEVIRGULA ]
-- On PONTOEVIRGULA reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 17:
var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) . PONTOEVIRGULA [ VOID STATIC PUBLIC LOGICO INTEIRO FCHAVE DOUBLE CARACTER ]
-- On PONTOEVIRGULA shift to state 18

State 18:
var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA . [ VOID STATIC PUBLIC LOGICO INTEIRO FCHAVE DOUBLE CARACTER ]
-- On VOID reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On STATIC reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On PUBLIC reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On LOGICO reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On INTEIRO reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On FCHAVE reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On DOUBLE reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On CARACTER reduce production var_decl -> tp_primitivo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 

State 19:
list(var_decl) -> var_decl list(var_decl) . [ STATIC PUBLIC FCHAVE ]
-- On STATIC reduce production list(var_decl) -> var_decl list(var_decl) 
-- On PUBLIC reduce production list(var_decl) -> var_decl list(var_decl) 
-- On FCHAVE reduce production list(var_decl) -> var_decl list(var_decl) 

State 20:
prog -> declaracao_algoritmo list(var_decl) . list(func_decl) comando_block EOF [ # ]
-- On STATIC shift to state 21
-- On list(func_decl) shift to state 159
-- On func_decl shift to state 175
-- On PUBLIC reduce production list(func_decl) -> 

State 21:
func_decl -> STATIC . func_type ID APAR option(fparams) FPAR func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On VOID shift to state 7
-- On LOGICO shift to state 8
-- On INTEIRO shift to state 9
-- On DOUBLE shift to state 10
-- On CARACTER shift to state 11
-- On tp_primitivo shift to state 22
-- On func_type shift to state 23

State 22:
func_type -> tp_primitivo . [ ID ]
-- On ID reduce production func_type -> tp_primitivo 

State 23:
func_decl -> STATIC func_type . ID APAR option(fparams) FPAR func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On ID shift to state 24

State 24:
func_decl -> STATIC func_type ID . APAR option(fparams) FPAR func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On APAR shift to state 25

State 25:
func_decl -> STATIC func_type ID APAR . option(fparams) FPAR func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On VOID shift to state 7
-- On LOGICO shift to state 8
-- On INTEIRO shift to state 9
-- On DOUBLE shift to state 10
-- On CARACTER shift to state 11
-- On tp_primitivo shift to state 26
-- On separated_nonempty_list(VIRGULA,fparam) shift to state 28
-- On option(fparams) shift to state 29
-- On fparams shift to state 155
-- On fparam shift to state 156
-- On FPAR reduce production option(fparams) -> 

State 26:
fparam -> tp_primitivo . ID [ VIRGULA FPAR ]
-- On ID shift to state 27

State 27:
fparam -> tp_primitivo ID . [ VIRGULA FPAR ]
-- On VIRGULA reduce production fparam -> tp_primitivo ID 
-- On FPAR reduce production fparam -> tp_primitivo ID 

State 28:
fparams -> separated_nonempty_list(VIRGULA,fparam) . [ FPAR ]
-- On FPAR reduce production fparams -> separated_nonempty_list(VIRGULA,fparam) 

State 29:
func_decl -> STATIC func_type ID APAR option(fparams) . FPAR func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On FPAR shift to state 30

State 30:
func_decl -> STATIC func_type ID APAR option(fparams) FPAR . func_bloc list(var_decl) FCHAVE [ STATIC PUBLIC ]
-- On ACHAVE shift to state 31
-- On func_bloc shift to state 152

State 31:
func_bloc -> ACHAVE . list(comando_list) [ VOID LOGICO INTEIRO FCHAVE DOUBLE CARACTER ]
-- On VERDADEIRO shift to state 32
-- On SE shift to state 33
-- On RETORNE shift to state 89
-- On PARA shift to state 93
-- On LITSTRING shift to state 35
-- On LITCHAR shift to state 36
-- On INT shift to state 37
-- On ID shift to state 38
-- On FLOAT shift to state 40
-- On FALSO shift to state 41
-- On ESCREVAL shift to state 105
-- On ESCREVA shift to state 110
-- On ENQUANTO shift to state 115
-- On APAR shift to state 42
-- On lvalue shift to state 43
-- On logico_value shift to state 45
-- On list(comando_list) shift to state 151
-- On fcall shift to state 122
-- On expr shift to state 124
-- On comando_se shift to state 132
-- On comando_ret shift to state 133
-- On comando_para shift to state 134
-- On comando_list shift to state 135
-- On comando_leia shift to state 137
-- On comando_fcall shift to state 138
-- On comando_escreval shift to state 139
-- On comando_escreva shift to state 140
-- On comando_enquanto shift to state 141
-- On comando_attr shift to state 142
-- On VOID reduce production list(comando_list) -> 
-- On LOGICO reduce production list(comando_list) -> 
-- On INTEIRO reduce production list(comando_list) -> 
-- On FCHAVE reduce production list(comando_list) -> 
-- On DOUBLE reduce production list(comando_list) -> 
-- On CARACTER reduce production list(comando_list) -> 

State 32:
logico_value -> VERDADEIRO . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production logico_value -> VERDADEIRO 
-- On SUB reduce production logico_value -> VERDADEIRO 
-- On SOMA reduce production logico_value -> VERDADEIRO 
-- On POTENCIA reduce production logico_value -> VERDADEIRO 
-- On PONTOEVIRGULA reduce production logico_value -> VERDADEIRO 
-- On PASSO reduce production logico_value -> VERDADEIRO 
-- On OU reduce production logico_value -> VERDADEIRO 
-- On MULT reduce production logico_value -> VERDADEIRO 
-- On MOD reduce production logico_value -> VERDADEIRO 
-- On MENORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MENOR reduce production logico_value -> VERDADEIRO 
-- On MAIORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MAIOR reduce production logico_value -> VERDADEIRO 
-- On IGUAL reduce production logico_value -> VERDADEIRO 
-- On FPAR reduce production logico_value -> VERDADEIRO 
-- On FCOL reduce production logico_value -> VERDADEIRO 
-- On E reduce production logico_value -> VERDADEIRO 
-- On DIVISAO reduce production logico_value -> VERDADEIRO 
-- On DIFERENTE reduce production logico_value -> VERDADEIRO 
-- On DE reduce production logico_value -> VERDADEIRO 
-- On ATRIB reduce production logico_value -> VERDADEIRO 
-- On ATE reduce production logico_value -> VERDADEIRO 

State 33:
comando_se -> SE . APAR expr FPAR ACHAVE list(comando_list) option(comando_senao) FCHAVE [ VOID VERDADEIRO SENAO SE RETORNE PARA LOGICO LITSTRING LITCHAR INTEIRO INT ID FLOAT FCHAVE FALSO ESCREVAL ESCREVA ENQUANTO DOUBLE CARACTER APAR ]
-- On APAR shift to state 34

State 34:
comando_se -> SE APAR . expr FPAR ACHAVE list(comando_list) option(comando_senao) FCHAVE [ VOID VERDADEIRO SENAO SE RETORNE PARA LOGICO LITSTRING LITCHAR INTEIRO INT ID FLOAT FCHAVE FALSO ESCREVAL ESCREVA ENQUANTO DOUBLE CARACTER APAR ]
-- On VERDADEIRO shift to state 32
-- On LITSTRING shift to state 35
-- On LITCHAR shift to state 36
-- On INT shift to state 37
-- On ID shift to state 38
-- On FLOAT shift to state 40
-- On FALSO shift to state 41
-- On APAR shift to state 42
-- On lvalue shift to state 43
-- On logico_value shift to state 45
-- On fcall shift to state 46
-- On expr shift to state 86

State 35:
expr -> LITSTRING . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production expr -> LITSTRING 
-- On SUB reduce production expr -> LITSTRING 
-- On SOMA reduce production expr -> LITSTRING 
-- On POTENCIA reduce production expr -> LITSTRING 
-- On PONTOEVIRGULA reduce production expr -> LITSTRING 
-- On PASSO reduce production expr -> LITSTRING 
-- On OU reduce production expr -> LITSTRING 
-- On MULT reduce production expr -> LITSTRING 
-- On MOD reduce production expr -> LITSTRING 
-- On MENORIGUAL reduce production expr -> LITSTRING 
-- On MENOR reduce production expr -> LITSTRING 
-- On MAIORIGUAL reduce production expr -> LITSTRING 
-- On MAIOR reduce production expr -> LITSTRING 
-- On IGUAL reduce production expr -> LITSTRING 
-- On FPAR reduce production expr -> LITSTRING 
-- On FCOL reduce production expr -> LITSTRING 
-- On E reduce production expr -> LITSTRING 
-- On DIVISAO reduce production expr -> LITSTRING 
-- On DIFERENTE reduce production expr -> LITSTRING 
-- On DE reduce production expr -> LITSTRING 
-- On ATRIB reduce production expr -> LITSTRING 
-- On ATE reduce production expr -> LITSTRING 

State 36:
expr -> LITCHAR . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production expr -> LITCHAR 
-- On SUB reduce production expr -> LITCHAR 
-- On SOMA reduce production expr -> LITCHAR 
-- On POTENCIA reduce production expr -> LITCHAR 
-- On PONTOEVIRGULA reduce production expr -> LITCHAR 
-- On PASSO reduce production expr -> LITCHAR 
-- On OU reduce production expr -> LITCHAR 
-- On MULT reduce production expr -> LITCHAR 
-- On MOD reduce production expr -> LITCHAR 
-- On MENORIGUAL reduce production expr -> LITCHAR 
-- On MENOR reduce production expr -> LITCHAR 
-- On MAIORIGUAL reduce production expr -> LITCHAR 
-- On MAIOR reduce production expr -> LITCHAR 
-- On IGUAL reduce production expr -> LITCHAR 
-- On FPAR reduce production expr -> LITCHAR 
-- On FCOL reduce production expr -> LITCHAR 
-- On E reduce production expr -> LITCHAR 
-- On DIVISAO reduce production expr -> LITCHAR 
-- On DIFERENTE reduce production expr -> LITCHAR 
-- On DE reduce production expr -> LITCHAR 
-- On ATRIB reduce production expr -> LITCHAR 
-- On ATE reduce production expr -> LITCHAR 

State 37:
expr -> INT . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production expr -> INT 
-- On SUB reduce production expr -> INT 
-- On SOMA reduce production expr -> INT 
-- On POTENCIA reduce production expr -> INT 
-- On PONTOEVIRGULA reduce production expr -> INT 
-- On PASSO reduce production expr -> INT 
-- On OU reduce production expr -> INT 
-- On MULT reduce production expr -> INT 
-- On MOD reduce production expr -> INT 
-- On MENORIGUAL reduce production expr -> INT 
-- On MENOR reduce production expr -> INT 
-- On MAIORIGUAL reduce production expr -> INT 
-- On MAIOR reduce production expr -> INT 
-- On IGUAL reduce production expr -> INT 
-- On FPAR reduce production expr -> INT 
-- On FCOL reduce production expr -> INT 
-- On E reduce production expr -> INT 
-- On DIVISAO reduce production expr -> INT 
-- On DIFERENTE reduce production expr -> INT 
-- On DE reduce production expr -> INT 
-- On ATRIB reduce production expr -> INT 
-- On ATE reduce production expr -> INT 

State 38:
fcall -> ID . APAR option(fargs) FPAR [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
lvalue -> ID . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ACOL ]
-- On APAR shift to state 39
-- On VIRGULA reduce production lvalue -> ID 
-- On SUB reduce production lvalue -> ID 
-- On SOMA reduce production lvalue -> ID 
-- On POTENCIA reduce production lvalue -> ID 
-- On PONTOEVIRGULA reduce production lvalue -> ID 
-- On PASSO reduce production lvalue -> ID 
-- On OU reduce production lvalue -> ID 
-- On MULT reduce production lvalue -> ID 
-- On MOD reduce production lvalue -> ID 
-- On MENORIGUAL reduce production lvalue -> ID 
-- On MENOR reduce production lvalue -> ID 
-- On MAIORIGUAL reduce production lvalue -> ID 
-- On MAIOR reduce production lvalue -> ID 
-- On IGUAL reduce production lvalue -> ID 
-- On FPAR reduce production lvalue -> ID 
-- On FCOL reduce production lvalue -> ID 
-- On E reduce production lvalue -> ID 
-- On DIVISAO reduce production lvalue -> ID 
-- On DIFERENTE reduce production lvalue -> ID 
-- On DE reduce production lvalue -> ID 
-- On ATRIB reduce production lvalue -> ID 
-- On ATE reduce production lvalue -> ID 
-- On ACOL reduce production lvalue -> ID 

State 39:
fcall -> ID APAR . option(fargs) FPAR [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VERDADEIRO shift to state 32
-- On LITSTRING shift to state 35
-- On LITCHAR shift to state 36
-- On INT shift to state 37
-- On ID shift to state 38
-- On FLOAT shift to state 40
-- On FALSO shift to state 41
-- On APAR shift to state 42
-- On separated_nonempty_list(VIRGULA,expr) shift to state 79
-- On option(fargs) shift to state 80
-- On lvalue shift to state 43
-- On logico_value shift to state 45
-- On fcall shift to state 46
-- On fargs shift to state 82
-- On expr shift to state 83
-- On FPAR reduce production option(fargs) -> 

State 40:
expr -> FLOAT . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production expr -> FLOAT 
-- On SUB reduce production expr -> FLOAT 
-- On SOMA reduce production expr -> FLOAT 
-- On POTENCIA reduce production expr -> FLOAT 
-- On PONTOEVIRGULA reduce production expr -> FLOAT 
-- On PASSO reduce production expr -> FLOAT 
-- On OU reduce production expr -> FLOAT 
-- On MULT reduce production expr -> FLOAT 
-- On MOD reduce production expr -> FLOAT 
-- On MENORIGUAL reduce production expr -> FLOAT 
-- On MENOR reduce production expr -> FLOAT 
-- On MAIORIGUAL reduce production expr -> FLOAT 
-- On MAIOR reduce production expr -> FLOAT 
-- On IGUAL reduce production expr -> FLOAT 
-- On FPAR reduce production expr -> FLOAT 
-- On FCOL reduce production expr -> FLOAT 
-- On E reduce production expr -> FLOAT 
-- On DIVISAO reduce production expr -> FLOAT 
-- On DIFERENTE reduce production expr -> FLOAT 
-- On DE reduce production expr -> FLOAT 
-- On ATRIB reduce production expr -> FLOAT 
-- On ATE reduce production expr -> FLOAT 

State 41:
logico_value -> FALSO . [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VIRGULA reduce production logico_value -> FALSO 
-- On SUB reduce production logico_value -> FALSO 
-- On SOMA reduce production logico_value -> FALSO 
-- On POTENCIA reduce production logico_value -> FALSO 
-- On PONTOEVIRGULA reduce production logico_value -> FALSO 
-- On PASSO reduce production logico_value -> FALSO 
-- On OU reduce production logico_value -> FALSO 
-- On MULT reduce production logico_value -> FALSO 
-- On MOD reduce production logico_value -> FALSO 
-- On MENORIGUAL reduce production logico_value -> FALSO 
-- On MENOR reduce production logico_value -> FALSO 
-- On MAIORIGUAL reduce production logico_value -> FALSO 
-- On MAIOR reduce production logico_value -> FALSO 
-- On IGUAL reduce production logico_value -> FALSO 
-- On FPAR reduce production logico_value -> FALSO 
-- On FCOL reduce production logico_value -> FALSO 
-- On E reduce production logico_value -> FALSO 
-- On DIVISAO reduce production logico_value -> FALSO 
-- On DIFERENTE reduce production logico_value -> FALSO 
-- On DE reduce production logico_value -> FALSO 
-- On ATRIB reduce production logico_value -> FALSO 
-- On ATE reduce production logico_value -> FALSO 

State 42:
expr -> APAR . expr FPAR [ VIRGULA SUB SOMA POTENCIA PONTOEVIRGULA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL E DIVISAO DIFERENTE DE ATRIB ATE ]
-- On VERDADEIRO shift to state 32
-- On LITSTRING shift to state 35
-- On LITCHAR shift to state 36
-- On INT shift to state 37
-- On ID shift to state 38
-- On FLOAT shift to state 40
-- On FALSO shift to state 41
-- On APAR shift to state 42
-- On lvalue shift to state 43
-- On logico_value shift to state 45
-- On fcall shift to state 46
-- On expr shift to state 77
